@@ -1,4 +1,5 @@
 libmpdclient 2.3 (2010/??/??)
+* get default timeout from environment variable MPD_TIMEOUT
 
 
 libmpdclient 2.2 (2010/04/25)
